# anyllm

./: .gitignore  README.md  manifest.json  package-lock.json  package.json
cli/: .env.example  .gitignore  README.md  pyproject.toml
cli/docs/: DOCUMENTATION.md  TECHNICAL_IMPLEMENTATION.md  anyllmv2.md  architechure.md  ascii.py  doc.txt  graphify.md  prd.md  touse.md  v3.md  v4.md
cli/src/anyllm/: banner.py  cli.py  composer.py  config.py  merger.py  push.py  storage.py
cli/src/anyllm/adapters/: __init__.py  base.py  chatgpt.py
cli/src/anyllm/context_graph/: __init__.py  _extractor.py  analyzer.py  models.py
cli/src/anyllm/distiller/: __init__.py  distiller.py
cli/src/anyllm/distiller/prompts/: v1-delta.md  v1.md
cli/src/anyllm/ingestors/: __init__.py  base.py  claude_code.py
cli/src/anyllm/injectors/: __init__.py  linux_wayland.py  linux_x11.py  macos.py  windows.py
cli/src/anyllm/integrations/: __init__.py  agy.py  base.py  claude.py  codex.py  cursor.py  detector.py  gemini.py  kilo.py  kiro.py  opencode.py
cli/tests/: conftest.py  test_graph_bridge.py  test_merger.py  test_storage_merge.py
cli/tests/fixtures/: graph_response_extracted.json  graph_response_inferred.json  graph_response_missing.json  snapshot_v1.md  snapshot_v2.md  snapshot_v3.md
docs/: prd.md
landing/: index.html  styles.css
src/: background.js  content.js  popup.css  popup.html  popup.js  sidepanel.html  sidepanel.js
src/adapters/: adapter.js
src/components/: ContextSidePanel.js  HandoffBanner.js  HighlightsPanel.js  PinboardPanel.js  highlightToolbar.js  (+1 more)
(+9 files in other folders)
