[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "anyllm-ctx"
version = "0.1.0"
description = "Git for LLM context. Snapshot a dying session, brief the next model in 30 seconds."
authors = [{ name = "anymindhq" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["llm", "ai", "context", "handoff", "claude", "chatgpt", "codex", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
push = ["pywin32>=306; sys_platform=='win32'"]
dev = ["pytest>=8.0"]

[project.scripts]
anyllm = "anyllm.cli:app"

[project.urls]
Homepage = "https://github.com/anymindhq/anyllm"
Repository = "https://github.com/anymindhq/anyllm"
Documentation = "https://github.com/anymindhq/anyllm#readme"

[tool.poetry]
packages = [{ include = "anyllm", from = "src" }]
include = ["src/anyllm/distiller/prompts/*.md"]
